--- a/app/src/main/res/layout/content_group_invite.xml
+++ b/app/src/main/res/layout/content_group_invite.xml
@@ -30,8 +30,7 @@
             android:layout_width="@dimen/image_invite"
             android:layout_height="@dimen/image_invite"
             android:layout_margin="@dimen/margin_large"
-            android:layout_gravity="center"
-            android:src="@tools:sample/avatars" />
+            android:layout_gravity="center" />
 
         <TextView
             android:id="@+id/tv_invite_username"
