--- a/app/src/main/res/layout/historylist_item.xml
+++ b/app/src/main/res/layout/historylist_item.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/margin_medium"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".GroupHistoryActivity"
-    tools:showIn="@layout/activity_group_history">
+    tools:context=".GroupHistoryActivity">
 
     <TextView
         android:id="@+id/tv_depositor_name"
