--- a/app/src/main/res/layout/item_event_list.xml
+++ b/app/src/main/res/layout/item_event_list.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/margin_large"
     android:orientation="horizontal"
-    app:layout_constraintTop_toBottomOf="@id/layout_event_list_image"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toLeftOf="parent">
 
@@ -26,7 +25,7 @@
         android:background="@drawable/event_list_box">
 
         <TextView
-            android:id="@+id/tv_event_list_desc"
+            android:id="@+id/tv_event_list_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/linotte_bold"
@@ -41,6 +40,6 @@
             android:fontFamily="@font/linotte_regular"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_heading"
-            android:text="Target Budget: 25.000.000"/>
+            android:text="Target Budget: 25.000.000" />
     </LinearLayout>
 </LinearLayout>
