add jenius logo in every layout

--- a/app/src/main/res/layout/activity_group_history.xml
+++ b/app/src/main/res/layout/activity_group_history.xml
@@ -25,4 +25,18 @@
     <!-- CONTENT -->
     <include layout="@layout/content_group_history" />
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="@dimen/image_large"
+            android:layout_height="@dimen/image_medium"
+            android:src="@drawable/img_jenius"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.design.widget.CoordinatorLayout>
