--- a/app/src/main/res/layout/activity_group_overview.xml
+++ b/app/src/main/res/layout/activity_group_overview.xml
@@ -27,13 +27,19 @@
     <!-- CONTENT -->
     <include layout="@layout/content_group_overview" />
 
-    <!-- FLOATING BUTTON -->
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="@dimen/image_large"
+            android:layout_height="@dimen/image_medium"
+            android:src="@drawable/img_jenius"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
