--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -182,5 +182,10 @@
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
+    <ImageView
+        android:layout_width="@dimen/image_large"
+        android:layout_height="@dimen/image_medium"
+        android:src="@drawable/img_jenius"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
