--- a/app/src/main/res/layout/content_group_invite.xml
+++ b/app/src/main/res/layout/content_group_invite.xml
@@ -78,4 +78,12 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="@dimen/image_large"
+        android:layout_height="@dimen/image_medium"
+        android:src="@drawable/img_jenius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
