--- a/app/src/main/res/layout/content_group_list.xml
+++ b/app/src/main/res/layout/content_group_list.xml
@@ -15,4 +15,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:layout_width="@dimen/image_large"
+        android:layout_height="@dimen/image_medium"
+        android:src="@drawable/img_jenius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
