--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@ x
     <dimen name="margin_large">20dp</dimen>
 
     <!-- IMAGE SIZES -->
+    <dimen name="image_logo">30dp</dimen>
     <dimen name="image_button">100dp</dimen>
     <dimen name="image_small">50dp</dimen>
     <dimen name="image_medium">70dp</dimen>
