--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,108 +8,11 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <!-- OVERVIEW-->
-    <TextView
-        android:id="@+id/tv_overview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/margin_medium"
-        android:paddingBottom="@dimen/margin_medium"
-        android:text="@string/overview"
-        android:textSize="@dimen/text_heading"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/dvd_overview"
-        style="@style/DividerThick"
-        app:layout_constraintBottom_toBottomOf="@id/tv_overview"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
 
 
-    <!-- BALANCE -->
-    <ImageView
-        android:id="@+id/iv_balance"
-        android:layout_width="@dimen/image_medium"
-        android:layout_height="@dimen/image_medium"
-        android:contentDescription="@string/balance_image_desc"
-        android:paddingTop="@dimen/margin_medium"
-        android:paddingBottom="@dimen/margin_medium"
-        android:src="@drawable/balance"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dvd_overview" />
 
-    <TextView
-        android:id="@+id/tv_balance_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/balance_text"
-        android:textSize="@dimen/text_heading"
-        app:layout_constraintBottom_toBottomOf="@id/iv_balance"
-        app:layout_constraintLeft_toRightOf="@id/iv_balance"
-        app:layout_constraintTop_toTopOf="@id/iv_balance" />
 
-    <TextView
-        android:id="@+id/tv_balance_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingRight="@dimen/margin_medium"
-        android:text="Rp 10.000.000,00"
-        android:textSize="@dimen/text_heading"
-        app:layout_constraintBottom_toBottomOf="@id/iv_balance"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_balance" />
-
-    <View
-        android:id="@+id/dvd_balance"
-        style="@style/DividerThin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_balance" />
-
-    <!-- HISTORY PAST WEEK -->
-    <ImageView
-        android:id="@+id/iv_history"
-        android:layout_width="@dimen/image_medium"
-        android:layout_height="@dimen/image_medium"
-        android:contentDescription="@string/balance_image_desc"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:src="@drawable/history"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dvd_balance" />
-
-    <TextView
-        android:id="@+id/tv_history_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This week"
-        android:textSize="@dimen/text_heading"
-        app:layout_constraintBottom_toBottomOf="@id/iv_history"
-        app:layout_constraintLeft_toRightOf="@id/iv_history"
-        app:layout_constraintTop_toTopOf="@id/iv_history" />
-
-    <TextView
-        android:id="@+id/tv_history_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rp 65.000,00"
-        android:textSize="@dimen/text_heading"
-        app:layout_constraintBottom_toBottomOf="@id/iv_history"
-        app:layout_constraintStart_toStartOf="@+id/tv_balance_amount"
-        app:layout_constraintTop_toTopOf="@id/iv_history" />
-
-    <!-- Image for this week statistic here -->
-
-    <View
-        android:id="@+id/dvd_history"
-        style="@style/DividerThick"
-        app:layout_constraintBottom_toBottomOf="@id/iv_history"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
+    <!-- LOGO JENIUS -->
     <ImageView
         android:layout_width="@dimen/image_large"
         android:layout_height="@dimen/image_medium"
